--- a/manifests/restore-ss.yaml
+++ b/manifests/restore-ss.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: restore-pvc-mysql
+  namespace: default
 spec:
   storageClassName: csi-hostpath-sc
   dataSource:
