--- a/manifests/take-ss.yaml
+++ b/manifests/take-ss.yaml
@@ -3,6 +3,7 @@ apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshot
 metadata:
   name: mysql-snap
+  namespace: default
 spec:
   volumeSnapshotClassName: csi-hostpath-snapclass
   source:
