--- a/manifests/backup-crd.yaml
+++ b/manifests/backup-crd.yaml
@@ -4,10 +4,23 @@ metadata:
   name: backups.backstore.github.com
 spec:
   group: backstore.github.com
+  names:
+    plural: backups
+    singular: backup
+    kind: Backup
+    shortNames:
+      - bkup
+  scope: Namespaced
   versions:
     - name: v1alpha1
       served: true
       storage: true
+      additionalPrinterColumns:
+        - jsonPath: .status.progress
+          name: Progress
+          type: string
+      subresources:
+        status: {}
       schema:
         openAPIV3Schema:
           type: object
@@ -29,10 +42,10 @@ spec:
                   type: string
                 namespace:
                   type: string
-  names:
-    plural: backups
-    singular: backup
-    kind: Backup
-    shortNames:
-      - bkup
-  scope: Namespaced
+            status:
+              type: object
+              properties:
+                progress:
+                  type: string
+
+status:
