--- a/manifests/restore.yaml
+++ b/manifests/restore.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   backup-name: mysql-fresh
   storage: 20Gi
-  volume-snapshot-class-name: csi-hostpath-snapclass
+  volume-snapshot-class-name: csi-hostpath-sc
 
