--- a/manifests/restore.yaml
+++ b/manifests/restore.yaml
@@ -3,7 +3,7 @@ kind: Restore
 metadata:
   name: restore-pvc-mysql
 spec:
-  backup-name: mysql-fresh
+  backup-name: mysql-after
   storage: 20Gi
   volume-snapshot-class-name: csi-hostpath-sc
 
